dist/1.0/bin/sample/retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Domestic Process</fullName>
        <description>Process for Domestic Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signature</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Domestic Service Order Process</fullName>
        <description>Process for Domestic Service Order Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed %28IS%29</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GTS Retail</fullName>
        <description>GTS Retail</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GTS Retail %5Bold%5D</fullName>
        <description>GTS Retail [old]</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GTS Wholesale</fullName>
        <description>GTS Wholesale</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GTS Wholesale %5Bold%5D</fullName>
        <description>GTS Wholesale [old]</description>
        <isActive>false</isActive>
        <values>
            <fullName>Cancellation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Order</fullName>
        </values>
        <values>
            <fullName>Invoicing</fullName>
        </values>
        <values>
            <fullName>Offer</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Provisioning</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Order</fullName>
        <description>Service Order</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>The date when Opportunity has been closed (Stage has been changed to Closed Won/Closed Lost)</description>
        <inlineHelpText>The date when Opportunity has been closed (Stage has been changed to Closed Won/Closed Lost)</inlineHelpText>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_to_Reg_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used on visualforce page &quot;local_opportunity_list&quot; when relating Opportunity to Regional Opportunity.</description>
        <inlineHelpText>Field used to mark Opportunities which should be related to given Regional Opportunity</inlineHelpText>
        <label>Add to Regional Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>= Total Amount - Canellation Amount</description>
        <formula>Total_Amount__c -  CancellationAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Total Amount - Canellation Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Check_Log__c</fullName>
        <description>Information about Credit Check process</description>
        <inlineHelpText>Information about Credit Check process</inlineHelpText>
        <label>Credit Check Log</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Decision__c</fullName>
        <description>Result of Credit Check process</description>
        <inlineHelpText>Result of Credit Check process</inlineHelpText>
        <label>Credit Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Flag_Icon__c</fullName>
        <description>Result of Credit Check</description>
        <formula>IF(ISPICKVAL(CC_Credit_Flag__c, &apos;Green&apos;), IMAGE(&apos;https://tapp0.salesforce.com/servlet/servlet.ImageServer?id=015T00000003a87&amp;oid=00DT00000005KFS&amp;lastMod=1289129543000&apos;, &apos;Green Flag&apos;), 
IF(ISPICKVAL(CC_Credit_Flag__c, &apos;Yellow&apos;), IMAGE(&apos;https://tapp0.salesforce.com/servlet/servlet.ImageServer?id=015T00000003a8M&amp;oid=00DT00000005KFS&amp;lastMod=1289129640000&apos;, &apos;Yellow Flag&apos;), 
IF(ISPICKVAL(CC_Credit_Flag__c, &apos;Orange&apos;), IMAGE(&apos;https://tapp0.salesforce.com/servlet/servlet.ImageServer?id=015T00000003a8N&amp;oid=00DT00000005KFS&amp;lastMod=1289129666000&apos;, &apos;Orange Flag&apos;), 
IF(ISPICKVAL(CC_Credit_Flag__c, &apos;Red&apos;), IMAGE(&apos;https://tapp0.salesforce.com/servlet/servlet.ImageServer?id=015T00000003a8C&amp;oid=00DT00000005KFS&amp;lastMod=1289129580000&apos;, &apos;Red Flag&apos;), 
IF(ISPICKVAL(CC_Credit_Flag__c, &apos;Black&apos;), IMAGE(&apos;https://tapp0.salesforce.com/servlet/servlet.ImageServer?id=015T00000003a8H&amp;oid=00DT00000005KFS&amp;lastMod=1289129614000&apos;, &apos;Black Flag&apos;), 
&apos;&apos; 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Result of Credit Check</inlineHelpText>
        <label>Credit Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Flag__c</fullName>
        <description>Result of Credit Check</description>
        <inlineHelpText>Result of Credit Check</inlineHelpText>
        <label>Credit Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Credit_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Credit Verification is Completed</description>
        <inlineHelpText>Indicates if Credit Verification is Completed</inlineHelpText>
        <label>Credit Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Deposit_Amount__c</fullName>
        <description>Recommended Amount of Guarantee</description>
        <inlineHelpText>Recommended Amount of Guarantee</inlineHelpText>
        <label>Guarantee Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_G2I_Report__c</fullName>
        <description>G2I Report Link</description>
        <formula>IF(ISBLANK(CC_Report_URL__c), &apos;Report not requested yet&apos;, IF(CC_Report_URL__c = &apos;Not Required&apos;, &apos;Report is not required&apos;, HYPERLINK(CC_Report_URL__c, &apos;Open Report&apos;, &apos;_blank&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>G2I Report Link</inlineHelpText>
        <label>G2I Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Guarantee_Type__c</fullName>
        <description>Guarantee type required for given Deal</description>
        <inlineHelpText>Guarantee type required for given Deal</inlineHelpText>
        <label>Guarantee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill of Exchange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Report_Status__c</fullName>
        <description>Status of Generated Report</description>
        <inlineHelpText>Status of Generated Report</inlineHelpText>
        <label>Report Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Report_URL__c</fullName>
        <description>URL to G2I Report</description>
        <inlineHelpText>URL to G2I Report</inlineHelpText>
        <label>Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Request_DateTime__c</fullName>
        <description>Date and Time when Request for Report was sent</description>
        <inlineHelpText>Date and Time when Request for Report was sent</inlineHelpText>
        <label>Request DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Requested_Report_ID__c</fullName>
        <description>ID of the Request sent to G2I</description>
        <inlineHelpText>ID of the Request sent to G2I</inlineHelpText>
        <label>Requested Report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Verification_Comment__c</fullName>
        <description>Additional comment for Credit Verification</description>
        <inlineHelpText>Additional comment for Credit Verification</inlineHelpText>
        <label>Verification Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculation_ID_Type__c</fullName>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Excel file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_ID__c</fullName>
        <label>Calculation ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Number__c</fullName>
        <description>Number of CBCT Calculation</description>
        <inlineHelpText>Number of CBCT Calculation</inlineHelpText>
        <label>Calculation Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation__c</fullName>
        <description>Link to CBCT Calculation</description>
        <formula>IF ( $RecordType.Name =&quot;Domestic&quot;, 
CASE( GTS_Location__c ,&quot;GTS Poland&quot;, HYPERLINK(&quot; https://pl-bct.in.gtsce.com/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp; Opportunity_No__c, &quot;Calculation Family&quot;),
&quot;GTS Hungary&quot;, HYPERLINK(&quot; https://hu-bct.in.gtsce.com/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp; Opportunity_No__c,&quot;Calculation Family&quot;),
&quot;GTS Slovakia&quot;, HYPERLINK(&quot; https://sk-bct.in.gtsce.com/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp; Opportunity_No__c,&quot;Calculation Family&quot;),
&quot;&quot;), 
IF (OR(ISBLANK(Calculation_Number__c) ,ISNULL(Calculation_Number__c )) ,&apos;Calculation has not been sent yet&apos;, HYPERLINK(&quot; https://is-bct.in.gtsce.com/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp; Opportunity_No__c,Calculation_Number__c))
)</formula>
        <inlineHelpText>Link to CBCT Calculation</inlineHelpText>
        <label>CBCT Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancellationAmount__c</fullName>
        <description>Amount of Cancelled Orders</description>
        <inlineHelpText>Amount of Cancelled Orders</inlineHelpText>
        <label>Cancellation Amount</label>
        <summarizedField>OpportunityLineItem.CancellationAmount__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cancellation_Amount_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>CancellationAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Amount CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_MRD__c</fullName>
        <description>Summary MRD of all Opportunity Products which have &quot;Include In Revenue&quot; and Canceled In Provisioning&quot; checked.</description>
        <inlineHelpText>Summary MRD of all Opportunity Products which have &quot;Include In Revenue&quot; and Canceled In Provisioning&quot; checked.</inlineHelpText>
        <label>Cancelled MRD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Capex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capex Re-useable CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Capex_One_off__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capex One-off CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>IS cost field. Summed up based on corresponding field on Opp. Product.</description>
        <inlineHelpText>Summary Capex_One_off of the deal.</inlineHelpText>
        <label>Capex One-off</label>
        <summarizedField>OpportunityLineItem.Capex_One_off__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <description>IS cost field. Summed up based on corresponding field on Opp. Product.</description>
        <inlineHelpText>Summary Capex_One_off of the deal.</inlineHelpText>
        <label>Capex Re-useable</label>
        <summarizedField>OpportunityLineItem.Capex__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Close_Date_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When marked it means that Opportunity could not be closed (as Closed Won) with requested date.</description>
        <inlineHelpText>When marked it means that Opportunity could not be closed (as Closed Won) with requested date.</inlineHelpText>
        <label>Close Date Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Last_Week__c</fullName>
        <description>True if close date is set within last week based on current date</description>
        <formula>if(CloseDate&lt;= (Last_Week_End_Date__c ) &amp;&amp; CloseDate&gt;=(Last_Week_Start_Date__c), &quot;true&quot;, &quot;false&quot;)</formula>
        <inlineHelpText>True if close date is set within last week based on current date</inlineHelpText>
        <label>Close Last Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_This_Week__c</fullName>
        <description>Close Date is set within current week</description>
        <formula>if(CloseDate&lt;= Last_Week_End_Date__c +7 &amp;&amp; CloseDate&gt;=Last_Week_Start_Date__c +7, &quot;true&quot;, &quot;false&quot;)</formula>
        <inlineHelpText>Close Date is set within current week</inlineHelpText>
        <label>Close This Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_month__c</fullName>
        <description>keeps the month of the opportunity close date</description>
        <formula>text(MONTH( CloseDate ))</formula>
        <inlineHelpText>keeps the month of the opportunity close date</inlineHelpText>
        <label>Close_month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Stores comments added with Add comment functionality</description>
        <inlineHelpText>Comments related to the deal.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commission_Fee__c</fullName>
        <description>International retail specified field.</description>
        <inlineHelpText>Value of commisison fee related to the deal.</inlineHelpText>
        <label>Commission Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <description>International retail specified field.</description>
        <inlineHelpText>Value of commisison fee in percent related to the deal.</inlineHelpText>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Status__c</fullName>
        <description>International retail specified field.</description>
        <inlineHelpText>Status of commission:
- Paid
- Partial</inlineHelpText>
        <label>Commission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>International retail specified field. Local Opportunity Owner</description>
        <inlineHelpText>Local Opportunity Owner</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the Opportunity Owner</description>
        <formula>OwnerUser__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Country of the Opportunity Owner</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Commercial_Contact__c</fullName>
        <description>Contact Person in case of Billing (Collection Department)</description>
        <inlineHelpText>Contact Person in case of Billing (Collection Department)</inlineHelpText>
        <label>Customer Commercial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Customer Commercial Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Expects_Delivery__c</fullName>
        <description>Delivery date expexted by customer</description>
        <inlineHelpText>Delivery date expexted by customer</inlineHelpText>
        <label>Customer Expects Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_RFQ_No__c</fullName>
        <description>Customer specific RFQ numeber</description>
        <inlineHelpText>Customer specific RFQ numeber</inlineHelpText>
        <label>Customer RFQ No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Rep__c</fullName>
        <description>Guarantee for reporting</description>
        <formula>IF( ISBLANK( CC_Deposit_Amount__c ) , 0, CC_Deposit_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Guarantee for reporting</inlineHelpText>
        <label>Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_in_Amou_Probability__c</fullName>
        <description>Created By Martin Slaby, 2011-07-19 12:22 on Full Sandbox</description>
        <formula>Difference_in_Amount__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Amou*Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference_in_Amount_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Difference_in_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Amount CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference_in_Amount__c</fullName>
        <description>Summary Difference in Amount (value before change - value after change) from relevant Requests</description>
        <inlineHelpText>Summary Difference in Amount (value before change - value after change) from relevant Requests</inlineHelpText>
        <label>Difference in Amount</label>
        <summarizedField>OpportunityLineItem.Difference_in_Amount__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>International retail specified field. Distributor eligible for deal commission.</description>
        <inlineHelpText>Distributor eligible for deal commission.</inlineHelpText>
        <label>Distributor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Disconnection__c</fullName>
        <description>Effective Disconnection Date</description>
        <inlineHelpText>Date when service has been Disconnected</inlineHelpText>
        <label>Effective Disconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Committed_Date__c</fullName>
        <description>Dellivery date committed by GTS</description>
        <inlineHelpText>Dellivery date committed by GTS</inlineHelpText>
        <label>GTS Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Ownership of Opportunity by GTS country location</description>
        <inlineHelpText>Ownership of Opportunity by GTS country location</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Gross_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Summary Gross Margin  of all relevant  Requets (included into Amount and not cancelled)</description>
        <inlineHelpText>Summary Gross Margin  of all relevant  Requets (included into Amount and not cancelled)</inlineHelpText>
        <label>Gross Margin</label>
        <summarizedField>OpportunityLineItem.Gross_Margin__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_percent__c</fullName>
        <description>Gross Margin / Proposal Revenue</description>
        <formula>IF (Proposal_Revenue__c!=0,Gross_Margin__c  / Proposal_Revenue__c,0)</formula>
        <inlineHelpText>Gross Margin / Proposal Revenue</inlineHelpText>
        <label>Gross Margin [%]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Has_Items_with_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked if there is any Oder for this Opportunity</description>
        <inlineHelpText>Informs if there is an Order releted to Opportunity</inlineHelpText>
        <label>Has Items with Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Project_Manager__c</fullName>
        <description>Head Manager responsible for Provisioning Process</description>
        <inlineHelpText>Head Manager responsible for Provisioning Process</inlineHelpText>
        <label>Head Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <description>Guide containing tips for Opportunity Management</description>
        <formula>If (Account.Has_Contact__c =false, &quot;To change Opportunity Stage from Suspect To Prospect on Account should  be at least one Active contact&quot;&amp;BR(), null) &amp; if  ( HasOpportunityLineItem = false,&quot;Selecting a product is mandatory for creating Quotation!&quot;&amp;BR(),null) &amp; if (Has_Items_with_Order__c=false,&quot;Creating of Quotation is mandatory for creating orders!&quot;&amp;BR(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Guide containing tips for Opportunity Management</inlineHelpText>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_Opportunity__c</fullName>
        <description>Related IS Opportunity</description>
        <inlineHelpText>Related IS Opportunity</inlineHelpText>
        <label>IS Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (IS Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if Opportunity is sublitted in approval process. PL specific</description>
        <inlineHelpText>True if Opportunity is sublitted in approval process.</inlineHelpText>
        <label>In Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Wholesale_Reports__c</fullName>
        <description>Criterion ot be used with Reports</description>
        <formula>IF( AND(Account.Name != &apos;GTS CE&apos;, Account.Parent.Name != &apos;GTS CE&apos;, Account.RecordTypeId = &apos;012200000009GNq&apos;) , &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Criterion ot be used with Reports
YES - if Account &quot;International Wholseale&quot; and its name and its paren account&apos;s name &lt;&gt; &quot;GTS CE&quot;</inlineHelpText>
        <label>Include in Wholesale Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Integration specific field storing Date/Time</description>
        <inlineHelpText>Integration specific field storing Date/Time</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Frozen Opportunity is not editable.  Marked when allowed time for processing on given stage has been exceeded. PL specific.</description>
        <inlineHelpText>Frozen Opportunity is not editable</inlineHelpText>
        <label>Is Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Corresponds to Send email Notification checkbox on Add comment page</description>
        <inlineHelpText>Corresponds to Send email Notification checkbox on Add comment page</inlineHelpText>
        <label>Last Comment Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>Stores last comment added with comment functionality. This is to have the possibility to send email notification with just last comment added</description>
        <inlineHelpText>Stores last comment added with comment functionality. This is to have the possibility to send email notification with just last comment added</inlineHelpText>
        <label>Last Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Comment_is_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked then indicates that last comment was added as public</description>
        <inlineHelpText>If marked then indicates that last comment was added as public</inlineHelpText>
        <label>Last Comment is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Extranet User (SFDC Contact) which has modified record</description>
        <inlineHelpText>Extranet User (SFDC Contact) which has modified record</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Last Modified by Extranet Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>